# qualify

./: .gitignore  CLAUDE.md  Makefile  install.ps1  install.sh  qualify.spec
backend/: pyproject.toml  run.py
backend/app/: main.py
backend/app/models/: state.py
backend/app/routers/: deployments.py  environments.py  logs.py  projects.py  servers.py  settings.py
backend/app/services/: compose_gen.py  env_parser.py  log_streamer.py  orchestrator.py  preflight.py  ssh_client.py  state_manager.py
backend/src/qualify/: cli.py  main.py
backend/src/qualify/models/: state.py
backend/src/qualify/routers/: deployments.py  environments.py  logs.py  projects.py  servers.py  settings.py
backend/src/qualify/services/: auth.py  build_tools.py  compose_gen.py  env_parser.py  keyring_store.py  log_streamer.py  orchestrator.py  preflight.py  server_audit.py  ssh_client.py  state_manager.py
backend/src/qualify/services/provisioner/: __init__.py  base.py  detect.py  registry.py  ubuntu_debian.py
docs/: virtualbox-test-setup.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/components/: AppLayout.tsx
frontend/src/lib/: api.ts  auth.ts  types.ts
frontend/src/pages/: Dashboard.tsx  DeploymentLogs.tsx  ProjectDetail.tsx  ProjectsPage.tsx  ServerAuditLog.tsx  ServerDetail.tsx  ServersPage.tsx  SettingsPage.tsx
